2016-03-15, Perry & Jonathan
 Upload initial project
 Fixed the offset code so that the crosshair maintains its monitor position