@@ -1,0 +1,11 @@
+﻿
+namespace Virtual_Crosshair
+{
+    public class CrosshairSettingsModel
+    {
+        public int HorizontalOffset = 0;
+        public int VerticalOffset = 0;
+        public double Scaling = 1.0;
+        public string ImageName;
+    }
+}
